--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@types/node": "25.0.8",
-    "@types/react": "19.2.8",
-    "@types/react-dom": "19.2.3",
-    "autoprefixer": "10.4.23",
-    "eslint": "9.39.2",
-    "eslint-config-next": "16.1.1",
     "next": "16.1.1",
-    "postcss": "8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwindcss": "4.1.18",
-    "typescript": "5.9.3"
+    "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
