--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/adapter-mariadb": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/themes": "^3.2.1",
+    "axios": "^1.13.2",
     "classname": "^0.0.0",
     "easymde": "^2.20.0",
     "mariadb": "^3.4.5",
@@ -19,6 +20,7 @@
     "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^4.3.5"
