--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/themes": "^3.2.1",
     "axios": "^1.13.2",
     "classname": "^0.0.0",
+    "delay": "^7.0.0",
     "easymde": "^2.20.0",
     "mariadb": "^3.4.5",
     "next": "16.1.1",
@@ -23,6 +24,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^4.3.5"
   },
